# LeaderboardAPI

./: .coverage  .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 01bb74eba2d4_add_leaderboards_table.py  15ebc74d9eb4_initial_migration_users_table.py  2023dc0d5948_add_entries_table.py  92073b6e0097_add_cascade_delete_to_entries.py  e31f354fc5ea_add_refresh_tokens_table.py
frontend/: app.js  index.html  leaderboard.html  login.html
src/: config.py  database.py  main.py
src/api/: __init__.py  auth.py  leaderboards.py
src/auth/: __init__.py  dependencies.py  utils.py
src/core/: config.py  database.py  redis.py
src/middleware/: rate_limiter.py
src/models/: __init__.py  entry.py  leaderboard.py  refresh_token.py  user.py
src/schemas/: __init__.py  entry.py  leaderboard.py  query.py  user.py
src/services/: auth_service.py  leaderboard_serivce.py  leaderboard_service.py
tests/: conftest.py  test_auth.py  test_leaderboards.py
